tests/specs/infer_simple_ts_arr_types.txt
# mod.ts
export const a = [1];
      export const b = [true];
      export const c = ["c"];
      export const d = [2, "d"];
      export const e = [1, 2, 3];
      export const f = ["a", 1, e];
      export const g = ["a", 1, true] as const;

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:14
  | 
1 | export const a = [1];
  |              ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:20
  | 
2 |       export const b = [true];
  |                    ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:3:20
  | 
3 |       export const c = ["c"];
  |                    ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:4:20
  | 
4 |       export const d = [2, "d"];
  |                    ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:5:20
  | 
5 |       export const e = [1, 2, 3];
  |                    ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:6:20
  | 
6 |       export const f = ["a", 1, e];
  |                    ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:7:20
  | 
7 |       export const g = ["a", 1, true] as const;
  |                    ^

# output.txt
Defined in file:///mod.ts:0:14

const a: number[]

Defined in file:///mod.ts:1:20

const b: boolean[]

Defined in file:///mod.ts:2:20

const c: string[]

Defined in file:///mod.ts:3:20

const d: (number | string)[]

Defined in file:///mod.ts:4:20

const e: number[]

Defined in file:///mod.ts:5:20

const f: any[]

Defined in file:///mod.ts:6:20

const g: ("a" | 1 | true)[]


# output.json
{
  "symbols": [
    {
      "name": "a",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 13,
            "byteIndex": 13
          },
          "declarationKind": "export",
          "kind": "variable",
          "def": {
            "tsType": {
              "kind": "array",
              "value": {
                "repr": "number",
                "kind": "keyword",
                "value": "number"
              }
            },
            "kind": "const"
          }
        }
      ]
    },
    {
      "name": "b",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 1,
            "col": 19,
            "byteIndex": 41
          },
          "declarationKind": "export",
          "kind": "variable",
          "def": {
            "tsType": {
              "kind": "array",
              "value": {
                "repr": "boolean",
                "kind": "keyword",
                "value": "boolean"
              }
            },
            "kind": "const"
          }
        }
      ]
    },
    {
      "name": "c",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 19,
            "byteIndex": 72
          },
          "declarationKind": "export",
          "kind": "variable",
          "def": {
            "tsType": {
              "kind": "array",
              "value": {
                "repr": "string",
                "kind": "keyword",
                "value": "string"
              }
            },
            "kind": "const"
          }
        }
      ]
    },
    {
      "name": "d",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 3,
            "col": 19,
            "byteIndex": 102
          },
          "declarationKind": "export",
          "kind": "variable",
          "def": {
            "tsType": {
              "kind": "array",
              "value": {
                "kind": "union",
                "value": [
                  {
                    "repr": "number",
                    "kind": "keyword",
                    "value": "number"
                  },
                  {
                    "repr": "string",
                    "kind": "keyword",
                    "value": "string"
                  }
                ]
              }
            },
            "kind": "const"
          }
        }
      ]
    },
    {
      "name": "e",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 4,
            "col": 19,
            "byteIndex": 135
          },
          "declarationKind": "export",
          "kind": "variable",
          "def": {
            "tsType": {
              "kind": "array",
              "value": {
                "repr": "number",
                "kind": "keyword",
                "value": "number"
              }
            },
            "kind": "const"
          }
        }
      ]
    },
    {
      "name": "f",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 5,
            "col": 19,
            "byteIndex": 169
          },
          "declarationKind": "export",
          "kind": "variable",
          "def": {
            "tsType": {
              "repr": "any[]",
              "kind": "array",
              "value": {
                "repr": "any",
                "kind": "keyword",
                "value": "any"
              }
            },
            "kind": "const"
          }
        }
      ]
    },
    {
      "name": "g",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 6,
            "col": 19,
            "byteIndex": 205
          },
          "declarationKind": "export",
          "kind": "variable",
          "def": {
            "tsType": {
              "kind": "array",
              "value": {
                "kind": "union",
                "value": [
                  {
                    "repr": "a",
                    "kind": "literal",
                    "value": {
                      "kind": "string",
                      "string": "a"
                    }
                  },
                  {
                    "repr": "1",
                    "kind": "literal",
                    "value": {
                      "kind": "number",
                      "number": 1.0
                    }
                  },
                  {
                    "repr": "true",
                    "kind": "literal",
                    "value": {
                      "kind": "boolean",
                      "boolean": true
                    }
                  }
                ]
              }
            },
            "kind": "const"
          }
        }
      ]
    }
  ]
}
